# e3d

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: macros.cmake
include/: e3d.h  e3d_arch.h  e3d_const.h  e3d_macros.h  e3d_platform.h  e3d_typedef.h
include/platform/: Platform.h
libs/: android_lib_debug.props  android_lib_release.props  win_lib_debug.props  win_lib_release.props
libs/crt/: crtlib.h  unistd.h  xlock.cpp
libs/crt/asm/: hwcap.h
libs/crt/dbgheap/: dbgheap.c  dbgint.h
libs/uchar/: inttypes.h  uchar.cpp  uchar.h
projects/: android_lib_debug.props  android_lib_release.props  e3d.sln  linux_lib_debug.props  linux_lib_release.props  win_lib_debug.props  win_lib_release.props
projects/platform/win/: platform.win.vcxproj  platform.win.vcxproj.filters
src/platform/: CMakeLists.txt  PlatformPCH.cpp  PlatformPCH.h
src/platform/os/: anyPlatform.h
src/platform/os/android/: networks.h
src/platform/os/ios/: headers.h  networks.h
src/platform/os/win/: headers.h  macros.h  networks.h
